--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logofinal.png",
-      // "src": "favicon.ico",
+      "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
